Revision history for Perl extension ExtUtils::PkgConfig.

x.xx  Sat Dec 29 01:41:40 CET 2007
	- Fix a test failure in t/4.t (RT #31966).
	- Add support for more pkg-config commands: cflags-only-I,
          cflags-only-other, libs-only-other, and static-libs (RT #32426, patch
          by Diab Jerius).

1.08  Fri Oct 19 22:04:08 CEST 2007
	- add Makefile.PL to MANIFEST.
	- In the version macro generator, handle non-numeric version number
          parts by only using the leading digits.
        - Make pkg-config print the errors it encounters so users know what went
	  wrong.

1.07  Sun Jan 23 13:22:03 EST 2005
	- Disable the RPM-related postamble on Win32.  The 'date' command
	  on windows is interactive, and caused Makefile.PL to hang.

1.06  Sun Sep 19 23:29:23 CEST 2004
	- Remove the "found package ..." message to make Makefile.PL's less
	  verbose.

1.05  Fri Jul 16 14:52:39 EDT 2004
	- add configure-time check for pkg-config, don't build without it.
	- add a pointer to pkg-config's webpage in the docs.

1.04  Fri Mar  5 00:28:59 EST 2004
	- add long-overdue version-checking import implementation.

1.03  Thu Feb 05 22:16:44 2004
	- add two new functions: create_version_macros and
	  write_version_macros.

1.02  Tue Nov 04 21:51:44 2003
	- heavily modifed patch by Alberto Manuel Brandão Simões appliled that 
	  adds some autoload stuff to extend basic functionality.

1.01  Fri Oct 03 16:02:20 2003
	- shuffle argument order to retain compatibility with newer versions
	  of pkg-config 
	- fixed some bugs with specfile creation

1.00  Mon Sep 15 23:51:58 2003
	- converted from Glib 1.00rc1's Glib::PkgConfig
