@@ -10,6 +10,8 @@ use warnings;
 use Test::More tests => 7;
 BEGIN { use_ok('ExtUtils::PkgConfig') };
 
+require 't/swallow_stderr.inc';
+
 #########################
 
 $ENV{PKG_CONFIG_PATH} = './t/';
@@ -22,8 +24,10 @@ ok( not $@ );
 ok( $pkg{modversion} and $pkg{cflags} and $pkg{libs} );
 
 # test 1 for failure
-eval { %pkg = ExtUtils::PkgConfig->find(qw/bad1/); };
-ok( $@ );
+swallow_stderr (sub {
+	eval { %pkg = ExtUtils::PkgConfig->find(qw/bad1/); };
+	ok( $@ );
+});
 
 # test 2 for success
 eval { %pkg = ExtUtils::PkgConfig->find(qw/bad1 test_glib-2.0/); };
@@ -31,6 +35,7 @@ ok( not $@ );
 ok( $pkg{modversion} and $pkg{cflags} and $pkg{libs} );
 
 # test 2 for failure
-eval { %pkg = ExtUtils::PkgConfig->find(qw/bad1 bad2/); };
-ok( $@ );
-
+swallow_stderr (sub {
+	eval { %pkg = ExtUtils::PkgConfig->find(qw/bad1 bad2/); };
+	ok( $@ );
+});
